``` feat(handler): Rename command utils classes to handler classes